ハンバーガーのナビゲーション一部実装

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,42 @@
         <span class="hamburger-menu__bar"></span>
       </button>
       <nav class="navigation">
-        <ul class="navigation__list">
+        <div>
+          <p>ABOUT</p>
+          <div class="navigation_list">
+            <div class="neon-line"></div>
+            <ul class="navigation_ul">
+              <li>
+                <a href="#">テーマ</a>
+              </li>
+              <li>
+                <a href="#">アクセス</a>
+              </li>
+              <li>
+                <a href="#">SNS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <p>ABOUT</p>
+          <div class="navigation_list">
+            <div class="neon-line"></div>
+            <ul class="navigation_ul">
+              <li>
+                <a href="#">テーマ</a>
+              </li>
+              <li>
+                <a href="#">アクセス</a>
+              </li>
+              <li>
+                <a href="#">SNS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- <ul class="navigation__list">
           <li class="navigation__list-item">
             <a href="#" class="navigation__link">会社情報</a>
           </li>
@@ -74,7 +109,7 @@
           <li class="navigation__list-item">
             <a href="#" class="navigation__link">お問い合わせ</a>
           </li>
-        </ul>
+        </ul> -->
       </nav>
       <!-- <button class="hamburger">
         <span class="ham_line1"></span>
