ハンバーガーメニューの中身完成(仮)

--- a/public/index.html
+++ b/public/index.html
@@ -61,38 +61,63 @@
         <span class="hamburger-menu__bar"></span>
       </button>
       <nav class="navigation">
-        <div>
-          <p>ABOUT</p>
-          <div class="navigation_list">
-            <div class="neon-line"></div>
-            <ul class="navigation_ul">
-              <li>
-                <a href="#">テーマ</a>
-              </li>
-              <li>
-                <a href="#">アクセス</a>
-              </li>
-              <li>
-                <a href="#">SNS</a>
-              </li>
-            </ul>
+        <div class="navigation_frame">
+          <div style="width: 40%">
+            <p>ABOUT</p>
+            <div class="navigation_list">
+              <div class="neon-line"></div>
+              <ul class="navigation_ul">
+                <li>
+                  <a href="#">テーマ</a>
+                </li>
+                <li>
+                  <a href="#">アクセス</a>
+                </li>
+                <li>
+                  <a href="#">SNS</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div>
-          <p>ABOUT</p>
-          <div class="navigation_list">
-            <div class="neon-line"></div>
-            <ul class="navigation_ul">
-              <li>
-                <a href="#">テーマ</a>
-              </li>
-              <li>
-                <a href="#">アクセス</a>
-              </li>
-              <li>
-                <a href="#">SNS</a>
-              </li>
-            </ul>
+          <div style="width: 45%">
+            <p>EVENT</p>
+            <div class="navigation_list">
+              <div class="neon-line" style="height: 120px"></div>
+              <ul class="navigation_ul">
+                <li>
+                  <a href="#">ステージ</a>
+                </li>
+                <li>
+                  <a href="#">ワークショップ</a>
+                </li>
+                <li>
+                  <a href="#">ブース</a>
+                </li>
+                <li>
+                  <a href="#">カフェ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div style="width: 40%; padding-top: 10%">
+            <p>CM</p>
+            <div class="navigation_list">
+              <div class="neon-line" style="height: 60px"></div>
+              <ul class="navigation_ul">
+                <li>
+                  <a href="#">映像</a>
+                </li>
+                <li>
+                  <a href="#">グッズ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div style="width: 45%"></div>
+          <div class="navigation_img">
+            <img src="./image/index/instagram.png" alt="インスタアイコン" />
+            <img src="./image/index/twitter.png" alt="twitterアイコン" />
+            <img src="./image/index/tiktok.png" alt="tiktokアイコン" />
           </div>
         </div>
 
