--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
         <a href="#EVENT" class="navi_element">EVENT</a>
         <a href="#CM" class="navi_element">CM</a>
       </div>
+      <!-- ハンバーガーメニュー -->
       <button class="hamburger-menu" id="js-hamburger-menu">
         <span class="hamburger-menu__bar"></span>
         <span class="hamburger-menu__bar"></span>
@@ -120,27 +121,7 @@
             <img src="./image/index/tiktok.png" alt="tiktokアイコン" />
           </div>
         </div>
-
-        <!-- <ul class="navigation__list">
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">会社情報</a>
-          </li>
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">事業紹介</a>
-          </li>
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">お知らせ</a>
-          </li>
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">お問い合わせ</a>
-          </li>
-        </ul> -->
       </nav>
-      <!-- <button class="hamburger">
-        <span class="ham_line1"></span>
-        <span class="ham_line2"></span>
-        <span class="ham_line3"></span>
-      </button> -->
     </header>
   </body>
 </html>
