--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
+      integrity="sha512-jEnuDt6jfecCjthQAJ+ed0MTVA++5ZKmlUcmDGBv2vUI/REn6FuIdixLNnQT+vKusE2hhTk2is3cFvv5wA+Sgg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/lottie.js" type="text/javascript"></script> -->
     <script src="./js/common.js"></script>
+    <script src="./js/index.js"></script>
+
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div id="first-view" class="first-view"></div>
     <header class="header">
       <div class="header_title">
         <a href="#" class="header_logo_a">
