アニメーション後のファーストビュー実装、ヘッダー固定化

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <script src="./js/index.js"></script>
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/top.css" />
   </head>
   <body>
     <div id="first-view" class="first-view"></div>
@@ -102,5 +103,10 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="top-logo">
+        <img src="./image/index/main_logo.png" alt="メインロゴ" class="top-img"/>
+      </div>
+    </main>
   </body>
 </html>
