aboutのpc画面実装

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,30 @@
     </header>
     <main>
       <div class="top-logo">
-        <img src="./image/index/main_logo.png" alt="メインロゴ" class="top-img"/>
+        <img
+          src="./image/index/main_logo.png"
+          alt="メインロゴ"
+          class="top-img"
+        />
+      </div>
+      <div class="about">
+        <div class="about_bg_text">
+          <div class="about-title">
+            <p style="font-size: 30px">芸工祭とは</p>
+            <h2 style="font-size: 65px">ABOUT</h2>
+          </div>
+          <div class="about-text">
+            <p>
+              芸工祭は、名古屋市立大学芸術
+              <br />工学部のお祭りなんだよ！
+              <br />学生たちがアートや技術で魅せる展示や、
+              <br />クリエイティブなグッズがズラリの模擬店。
+              <br />音楽や競技ステージでは、笑いあり、
+              <br />感動ありのショーが繰り広げられちゃう。
+              <br />まるでクリエイティブな夢の国みたいなんだ！
+            </p>
+          </div>
+        </div>
       </div>
     </main>
   </body>
