aboutのスマホ対応実装

--- a/public/index.html
+++ b/public/index.html
@@ -114,8 +114,8 @@
       <div class="about">
         <div class="about_bg_text">
           <div class="about-title">
-            <p style="font-size: 30px">芸工祭とは</p>
-            <h2 style="font-size: 65px">ABOUT</h2>
+            <p>芸工祭とは</p>
+            <h2>ABOUT</h2>
           </div>
           <div class="about-text">
             <p>
