--- a/public/about/index.html
+++ b/public/about/index.html
@@ -98,43 +98,66 @@
             <h1>ABOUT</h1>
         </div>
         <div class="second-nav">
-            <div class="second-nav-1">
-                <a href = "#theme"></a>
+            <div class="second-nav-box">
+                <a href = "#theme">今年のテーマ</a>
             </div>
-            <div class="second-nav-2">
-                <a href = "#access"></a>
+            <div class="second-nav-box">
+                <a href = "#access">アクセス</a>
             </div>
-            <div class="second-nav-3">
-                <a href = "#sns"></a>
+            <div class="second-nav-box">
+                <a href = "#sns">SNS</a>
             </div>
-        </div>
-        <div id="theme">
-            <div class="theme-left">
-                <h3>今年のテーマ</h3>
-                <h2>NEON</h2>
-                <p>今年の芸工祭のテーマは「NEON」です。<br><br>
-                    コロナ禍が徐々に明けて、私たちの暮らしが元に戻りつつあります。
-                     困難を乗り越えた今だからこそ新しい(neo)スタートを踏み出さなければなりません。<br><br>
-                    華やかで美しい、それでいてどこか懐かしい光をはなつネオンライトのように学生ひとりひとりを個性の色で彩り、
-                    これからも愛してもらえる芸工祭になるようにと”NEON”というテーマを設定しました。</p>
-            </div>
-            <div class="theme-right"></div>
-        </div>
-        <div id="date">
-            <h4>開催日時<br>11/4(sat) 10:00 - 16:00<br>11/5(sun) 10:00 - 16:00</h4>
-        </div>
-        <div id="access">
-            <h3>アクセス</h3>
-            <h2>ACCESS</h2>
-            <div class="access-map"></div>
-            <h2>バスでお越しの方</h2>
-            <div class="access-bus"></div>
-            <h2>電車でお越しの方</h2>
-            <div class="access-subway"></div>
-        </div>
-        <div id="sns">
-            <h4>FOLLOW US</h4>
         </div>
     </div>
+    <div id="theme">
+        <div class="theme-left">
+            <h3>今年のテーマ</h3>
+            <h2>NEON</h2>
+            <p>今年の芸工祭のテーマは「NEON」です。<br><br>
+                コロナ禍が徐々に明けて、私たちの暮らしが元に戻りつつあります。
+                    困難を乗り越えた今だからこそ新しい(neo)スタートを踏み出さなければなりません。<br><br>
+                華やかで美しい、それでいてどこか懐かしい光をはなつネオンライトのように学生ひとりひとりを個性の色で彩り、
+                これからも愛してもらえる芸工祭になるようにと”NEON”というテーマを設定しました。
+            </p>
+        </div>
+        <div class="theme-right"></div>
+    </div>
+    <div id="date">
+        <h4>開催日時<br>11/4(sat) 10:00 - 16:00<br>11/5(sun) 10:00 - 16:00</h4>
+    </div>
+    <div id="access">
+        <div class="map">
+            <h3>アクセス</h3>
+            <h2>ACCESS</h2>
+            <div class="map-img"></div>
+        </div>
+        <div class="bus">
+            <h2>バスでお越しの方</h2>
+            <div class="bus-img"></div>
+        </div>
+        <div class="subway">
+            <h2>電車でお越しの方</h2>
+            <div class="subway-img"></div>
+        </div>
+    </div>
+    <div id="sns">
+        <div class="contents">
+            <h4>FOLLOW US</h4>
+            <hr>
+            <div class="sns-logo">
+                <img src = "../image/index/logo-insta.svg">
+                <img src = "../image/index/logo-x.svg">
+                <img src = "../image/index/logo-tiktok.svg">
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="contents">
+            <p>名古屋市立大学芸術工学部</p>
+            <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
+            <p>TEL052-721-1225(代) FAX052-721-3110</p>
+            <p>©️ Copyright 2023geikosai</p>
+        </div>
+    </footer>
   </body>
 </html>
