一覧とSNS部分実装

--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,32 @@
           </div>
         </div>
       </div>
+      <div class="indexs">
+        <div class="indexs-and-sns">
+          <div class="index-list">
+            <div class="index-theme">テーマ説明</div>
+            <div class="index-access">アクセス</div>
+            <div class="index-stage">ステージ</div>
+            <div class="index-cafe">カフェ</div>
+            <div class="index-workshop">ワークショップ</div>
+            <div class="index-booth">ブース</div>
+            <div class="index-game">ゲーム</div>
+            <div class="index-cm">CM</div>
+            <div class="index-goods">グッズ</div>
+          </div>
+          <div class="follow-us">
+            <p>FOLLOW US</p>
+            <div class="center-bar">
+              <span></span>
+            </div>
+            <div class="sns-imgs">
+              <img src="./image/index/instagram-black.png" alt="インスタアイコン">
+              <img src="./image/index/instagram-black.png" alt="インスタアイコン">
+              <img src="./image/index/tiktok.png" alt="tiktokアイコン">
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
