--- a/public/index.html
+++ b/public/index.html
@@ -149,13 +149,28 @@
               <span></span>
             </div>
             <div class="sns-imgs">
-              <img src="./image/index/instagram-black.png" alt="インスタアイコン">
-              <img src="./image/index/instagram-black.png" alt="インスタアイコン">
-              <img src="./image/index/tiktok.png" alt="tiktokアイコン">
+              <img
+                src="./image/index/instagram-black.png"
+                alt="インスタアイコン"
+              />
+              <img
+                src="./image/index/instagram-black.png"
+                alt="インスタアイコン"
+              />
+              <img src="./image/index/tiktok.png" alt="tiktokアイコン" />
             </div>
           </div>
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <p>
+        <span>名古屋市立大学芸術工学部</span>
+        <br />
+        〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
+        FAX052-721-3110
+      </p>
+      <p>©️ Copyright 2023geikosai</p>
+    </footer>
   </body>
 </html>
