ナビゲーションのバグ修正

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -94,9 +94,7 @@
       </nav>
     </header>
     <div class = "top">
-        <div class="h-frame">
-            <h1>ABOUT</h1>
-        </div>
+        <h2>ABOUT</h2>
         <div class="second-nav">
             <div class="second-nav-box">
                 <a href = "#theme">今年のテーマ</a>
@@ -110,44 +108,41 @@
         </div>
     </div>
     <div id="theme">
-        <div class="theme-left">
-            <h3>今年のテーマ</h3>
-            <h2>NEON</h2>
-            <p>今年の芸工祭のテーマは「NEON」です。<br><br>
-                コロナ禍が徐々に明けて、私たちの暮らしが元に戻りつつあります。
-                    困難を乗り越えた今だからこそ新しい(neo)スタートを踏み出さなければなりません。<br><br>
-                華やかで美しい、それでいてどこか懐かしい光をはなつネオンライトのように学生ひとりひとりを個性の色で彩り、
-                これからも愛してもらえる芸工祭になるようにと”NEON”というテーマを設定しました。
-            </p>
-        </div>
-        <div class="theme-right"></div>
+        <h3>今年のテーマ</h3>
+        <h2>NEON</h2>
+        <img src = "../image/index/main_logo.webp">
+        <p>コロナ禍が徐々に明けて、私たちの暮らしが元に戻りつつあります。
+            困難を乗り越えた今だからこそ新しい(neo)スタートを踏み出さなければなりません。<br><br>
+            華やかで美しい、それでいてどこか懐かしい光をはなつネオンライトのように学生ひとりひとりを個性の色で彩り、
+            これからも愛してもらえる芸工祭になるようにと”NEON”というテーマを設定しました。
+        </p>
     </div>
     <div id="date">
-        <h4>開催日時<br>11/4(sat) 10:00 - 16:00<br>11/5(sun) 10:00 - 16:00</h4>
+        <p>開催日時<br>11/4(sat) 10:00 - 16:00<br>11/5(sun) 10:00 - 16:00</p>
     </div>
     <div id="access">
         <div class="map">
             <h3>アクセス</h3>
             <h2>ACCESS</h2>
-            <div class="map-img"></div>
+            <img src = "../image/event/about/map.webp" class="map-img">
         </div>
         <div class="bus">
             <h2>バスでお越しの方</h2>
-            <div class="bus-img"></div>
+            <img src = "../image/event/about/bus.webp" class="bus-img">
         </div>
         <div class="subway">
             <h2>電車でお越しの方</h2>
-            <div class="subway-img"></div>
+            <img src = "../image/event/about/subway.webp" class="subway-img">
         </div>
     </div>
     <div id="sns">
         <div class="contents">
-            <h4>FOLLOW US</h4>
+            <p>FOLLOW US</p>
             <hr>
             <div class="sns-logo">
-                <img src = "../image/index/logo-insta.svg">
-                <img src = "../image/index/logo-x.svg">
-                <img src = "../image/index/logo-tiktok.svg">
+                <a href="https://www.instagram.com/geiko_sai_2023/" target="_blank" rel="noreferrer noopener"><img src = "../image/index/logo-insta.svg" alt="インスタ"></a>
+                <img src = "../image/index/logo-x.svg" alt="x">
+                <a href="https://www.tiktok.com/@geiko_2023" target="_blank" rel="noreferrer noopener"><img src = "../image/index/logo-tiktok.svg" alt="tiktok"></a>
             </div>
         </div>
     </div>
