1:タブレット時のヘッダーに対応 2:second-navのボタンの判定をa→divに修正 3:グッズのタブレット時の挙動修正

--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -96,12 +96,16 @@
 <div class = "top">
     <h2>CM</h2>
     <div class="second-nav">
-        <div class="second-nav-box">
-            <a href = "./movie.html">映像</a>
-        </div>
-        <div class="second-nav-box">
-            <a href = "./goods.html">グッズ</a>
-        </div>
+        <a href="./movie.html">
+            <div class="second-nav-box">
+                <p>映像</p>
+            </div>
+        </a>
+        <a href="./goods.html">
+            <div class="second-nav-box">
+                <p>グッズ</p>
+            </div>
+        </a>
     </div>
 </div>
 <div class="movie">
