前コミットと同様の修正をmovieで行なった

--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -108,7 +108,7 @@
         </a>
     </div>
 </div>
-<div class="movie">
+<div class="goods">
     <h2>グッズ</h2>
     <div class="contents">
         <div class="area">
