前コミットと同様の修正をaboutページで行いました。

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -96,15 +96,21 @@
     <div class = "top">
         <h2>ABOUT</h2>
         <div class="second-nav">
+          <a href="#theme">
             <div class="second-nav-box">
-                <a href = "#theme">今年のテーマ</a>
+                <p>今年のテーマ</p>
             </div>
+          </a>
+          <a href="#access">
             <div class="second-nav-box">
-                <a href = "#access">アクセス</a>
+                <p>アクセス</p>
             </div>
+          </a>
+          <a href="#sns">
             <div class="second-nav-box">
-                <a href = "#sns">SNS</a>
+                <p>SNS</p>
             </div>
+          </a>
         </div>
     </div>
     <div id="theme">
