セクション選択画面の修正、aタグのジャンプ先設定

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -21,9 +21,9 @@
         <a href="#" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
-        <a href="#ABOUT" class="navi_element">ABOUT</a>
-        <a href="#EVENT" class="navi_element">EVENT</a>
-        <a href="#CM" class="navi_element">CM</a>
+        <a href="../index.html" class="navi_element">ABOUT</a>
+        <a href="../event/index.html" class="navi_element">EVENT</a>
+        <a href="../cm/movie.html" class="navi_element">CM</a>
       </div>
       <!-- ハンバーガーメニュー -->
       <button class="hamburger-menu" id="js-hamburger-menu">
@@ -39,13 +39,13 @@
               <div class="neon-line"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">テーマ</a>
+                  <a href="../about/index.html#theme">テーマ</a>
                 </li>
                 <li>
-                  <a href="#">アクセス</a>
+                  <a href="../about/index.html#access">アクセス</a>
                 </li>
                 <li>
-                  <a href="#">SNS</a>
+                  <a href="../about/index.html#sns">SNS</a>
                 </li>
               </ul>
             </div>
@@ -56,16 +56,16 @@
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">ステージ</a>
+                  <a href="../event/index.html">ステージ</a>
                 </li>
                 <li>
-                  <a href="#">ワークショップ</a>
+                  <a href="../event/workshop.html">ワークショップ</a>
                 </li>
                 <li>
-                  <a href="#">ブース</a>
+                  <a href="../event/booth.html">ブース</a>
                 </li>
                 <li>
-                  <a href="#">カフェ</a>
+                  <a href="../event/cafe.html">カフェ</a>
                 </li>
               </ul>
             </div>
@@ -76,10 +76,10 @@
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">映像</a>
+                  <a href="../cm/movie.html">映像</a>
                 </li>
                 <li>
-                  <a href="#">グッズ</a>
+                  <a href="../cm/goods.html">グッズ</a>
                 </li>
               </ul>
             </div>
@@ -93,72 +93,83 @@
         </div>
       </nav>
     </header>
-    <div class = "top">
-        <h2>ABOUT</h2>
-        <div class="second-nav">
-          <a href="#theme">
-            <div class="second-nav-box">
-                <p>今年のテーマ</p>
-            </div>
-          </a>
-          <a href="#access">
-            <div class="second-nav-box">
-                <p>アクセス</p>
-            </div>
-          </a>
-          <a href="#sns">
-            <div class="second-nav-box">
-                <p>SNS</p>
-            </div>
-          </a>
-        </div>
+    <div class="top">
+      <h2>ABOUT</h2>
+      <div class="second-nav">
+        <a href="#theme">
+          <div class="second-nav-box">
+            <p>今年のテーマ</p>
+          </div>
+        </a>
+        <a href="#access">
+          <div class="second-nav-box">
+            <p>アクセス</p>
+          </div>
+        </a>
+        <a href="#sns">
+          <div class="second-nav-box">
+            <p>SNS</p>
+          </div>
+        </a>
+      </div>
     </div>
     <div id="theme">
-        <h3>今年のテーマ</h3>
-        <h2>NEON</h2>
-        <img src = "../image/index/main_logo.webp">
-        <p>コロナ禍が徐々に明けて、私たちの暮らしが元に戻りつつあります。
-            困難を乗り越えた今だからこそ新しい(neo)スタートを踏み出さなければなりません。<br><br>
-            華やかで美しい、それでいてどこか懐かしい光をはなつネオンライトのように学生ひとりひとりを個性の色で彩り、
-            これからも愛してもらえる芸工祭になるようにと”NEON”というテーマを設定しました。
-        </p>
+      <h3>今年のテーマ</h3>
+      <h2>NEON</h2>
+      <img src="../image/index/main_logo.webp" />
+      <p>
+        コロナ禍が徐々に明けて、私たちの暮らしが元に戻りつつあります。
+        困難を乗り越えた今だからこそ新しい(neo)スタートを踏み出さなければなりません。<br /><br />
+        華やかで美しい、それでいてどこか懐かしい光をはなつネオンライトのように学生ひとりひとりを個性の色で彩り、
+        これからも愛してもらえる芸工祭になるようにと”NEON”というテーマを設定しました。
+      </p>
     </div>
     <div id="date">
-        <p>開催日時<br>11/4(sat) 10:00 - 16:00<br>11/5(sun) 10:00 - 16:00</p>
+      <p>開催日時<br />11/4(sat) 10:00 - 16:00<br />11/5(sun) 10:00 - 16:00</p>
     </div>
     <div id="access">
-        <div class="map">
-            <h3>アクセス</h3>
-            <h2>ACCESS</h2>
-            <img src = "../image/event/about/map.webp" class="map-img">
-        </div>
-        <div class="bus">
-            <h2>バスでお越しの方</h2>
-            <img src = "../image/event/about/bus.webp" class="bus-img">
-        </div>
-        <div class="subway">
-            <h2>電車でお越しの方</h2>
-            <img src = "../image/event/about/subway.webp" class="subway-img">
-        </div>
+      <div class="map">
+        <h3>アクセス</h3>
+        <h2>ACCESS</h2>
+        <img src="../image/event/about/map.webp" class="map-img" />
+      </div>
+      <div class="bus">
+        <h2>バスでお越しの方</h2>
+        <img src="../image/event/about/bus.webp" class="bus-img" />
+      </div>
+      <div class="subway">
+        <h2>電車でお越しの方</h2>
+        <img src="../image/event/about/subway.webp" class="subway-img" />
+      </div>
     </div>
     <div id="sns">
-        <div class="contents">
-            <p>FOLLOW US</p>
-            <hr>
-            <div class="sns-logo">
-                <a href="https://www.instagram.com/geiko_sai_2023/" target="_blank" rel="noreferrer noopener"><img src = "../image/index/logo-insta.svg" alt="インスタ"></a>
-                <img src = "../image/index/logo-x.svg" alt="x">
-                <a href="https://www.tiktok.com/@geiko_2023" target="_blank" rel="noreferrer noopener"><img src = "../image/index/logo-tiktok.svg" alt="tiktok"></a>
-            </div>
+      <div class="contents">
+        <p>FOLLOW US</p>
+        <hr />
+        <div class="sns-logo">
+          <a
+            href="https://www.instagram.com/geiko_sai_2023/"
+            target="_blank"
+            rel="noreferrer noopener"
+            ><img src="../image/index/logo-insta.svg" alt="インスタ"
+          /></a>
+          <img src="../image/index/logo-x.svg" alt="x" />
+          <a
+            href="https://www.tiktok.com/@geiko_2023"
+            target="_blank"
+            rel="noreferrer noopener"
+            ><img src="../image/index/logo-tiktok.svg" alt="tiktok"
+          /></a>
         </div>
+      </div>
     </div>
     <footer>
-        <div class="contents">
-            <p>名古屋市立大学芸術工学部</p>
-            <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
-            <p>TEL052-721-1225(代) FAX052-721-3110</p>
-            <p>©️ Copyright 2023geikosai</p>
-        </div>
+      <div class="contents">
+        <p>名古屋市立大学芸術工学部</p>
+        <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
+        <p>TEL052-721-1225(代) FAX052-721-3110</p>
+        <p>©️ Copyright 2023geikosai</p>
+      </div>
     </footer>
   </body>
 </html>
