--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
         <a href="#" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
-        <a href="#ABOUT" class="navi_element">ABOUT</a>
-        <a href="#EVENT" class="navi_element">EVENT</a>
-        <a href="#CM" class="navi_element">CM</a>
+        <a href="./about/index.html" class="navi_element">ABOUT</a>
+        <a href="./event/index.html" class="navi_element">EVENT</a>
+        <a href="./cm/movie.html" class="navi_element">CM</a>
       </div>
       <!-- ハンバーガーメニュー -->
       <button class="hamburger-menu" id="js-hamburger-menu">
@@ -49,13 +49,13 @@
               <div class="neon-line"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">テーマ</a>
+                  <a href="./about/index.html#theme">テーマ</a>
                 </li>
                 <li>
-                  <a href="#">アクセス</a>
+                  <a href="./about/index.html#access">アクセス</a>
                 </li>
                 <li>
-                  <a href="#">SNS</a>
+                  <a href="./about/index.html#sns">SNS</a>
                 </li>
               </ul>
             </div>
@@ -66,16 +66,16 @@
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">ステージ</a>
+                  <a href="./event/index.html">ステージ</a>
                 </li>
                 <li>
-                  <a href="#">ワークショップ</a>
+                  <a href="./event/workshop.html">ワークショップ</a>
                 </li>
                 <li>
-                  <a href="#">ブース</a>
+                  <a href="./event/booth.html">ブース</a>
                 </li>
                 <li>
-                  <a href="#">カフェ</a>
+                  <a href="./event/cafe.html">カフェ</a>
                 </li>
               </ul>
             </div>
@@ -86,10 +86,10 @@
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">映像</a>
+                  <a href="./cm/movie.html">映像</a>
                 </li>
                 <li>
-                  <a href="#">グッズ</a>
+                  <a href="./cm/goods.html">グッズ</a>
                 </li>
               </ul>
             </div>
