--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -1,146 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Document</title>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
-<script src="../js/common.js"></script>
-<link rel="stylesheet" href="../css/style.css" />
-<link rel="stylesheet" href="../css/goods.css" />
-</head>
-<body>
-<header class="header">
-    <div class="header_title">
-    <a href="#" class="header_logo_a">
-        <img
-        src="../image/index/main_logo.png"
-        alt="メインロゴ"
-        class="header_logo"
-    /></a>
-    <a href="#" class="navi_element">GEIKO SAI 2023</a>
-    </div>
-    <div class="navi" id="hamburgerMenu">
-    <a href="#ABOUT" class="navi_element">ABOUT</a>
-    <a href="#EVENT" class="navi_element">EVENT</a>
-    <a href="#CM" class="navi_element">CM</a>
-    </div>
-    <!-- ハンバーガーメニュー -->
-    <button class="hamburger-menu" id="js-hamburger-menu">
-    <span class="hamburger-menu__bar"></span>
-    <span class="hamburger-menu__bar"></span>
-    <span class="hamburger-menu__bar"></span>
-    </button>
-    <nav class="navigation">
-    <div class="navigation_frame">
-        <div style="width: 40%">
-        <p>ABOUT</p>
-        <div class="navigation_list">
-            <div class="neon-line"></div>
-            <ul class="navigation_ul">
-            <li>
-                <a href="#">テーマ</a>
-            </li>
-            <li>
-                <a href="#">アクセス</a>
-            </li>
-            <li>
-                <a href="#">SNS</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-        <div style="width: 45%">
-        <p>EVENT</p>
-        <div class="navigation_list">
-            <div class="neon-line" style="height: 120px"></div>
-            <ul class="navigation_ul">
-            <li>
-                <a href="#">ステージ</a>
-            </li>
-            <li>
-                <a href="#">ワークショップ</a>
-            </li>
-            <li>
-                <a href="#">ブース</a>
-            </li>
-            <li>
-                <a href="#">カフェ</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-        <div style="width: 40%; padding-top: 10%">
-        <p>CM</p>
-        <div class="navigation_list">
-            <div class="neon-line" style="height: 60px"></div>
-            <ul class="navigation_ul">
-            <li>
-                <a href="#">映像</a>
-            </li>
-            <li>
-                <a href="#">グッズ</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-        <div style="width: 45%"></div>
-        <div class="navigation_img">
-        <img src="../image/index/instagram.png" alt="インスタアイコン" />
-        <img src="../image/index/twitter.png" alt="twitterアイコン" />
-        <img src="../image/index/tiktok.png" alt="tiktokアイコン" />
-        </div>
-    </div>
-    </nav>
-</header>
-<div class = "top">
-    <h2>CM</h2>
-    <div class="second-nav">
-        <a href="./movie.html">
-            <div class="second-nav-box">
-                <p>映像</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
+    <script src="../js/common.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/goods.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="header_title">
+        <a href="#" class="header_logo_a">
+          <img
+            src="../image/index/main_logo.png"
+            alt="メインロゴ"
+            class="header_logo"
+        /></a>
+        <a href="#" class="navi_element">GEIKO SAI 2023</a>
+      </div>
+      <div class="navi" id="hamburgerMenu">
+        <a href="../index.html" class="navi_element">ABOUT</a>
+        <a href="../event/index.html" class="navi_element">EVENT</a>
+        <a href="../cm/movie.html" class="navi_element">CM</a>
+      </div>
+      <!-- ハンバーガーメニュー -->
+      <button class="hamburger-menu" id="js-hamburger-menu">
+        <span class="hamburger-menu__bar"></span>
+        <span class="hamburger-menu__bar"></span>
+        <span class="hamburger-menu__bar"></span>
+      </button>
+      <nav class="navigation">
+        <div class="navigation_frame">
+          <div style="width: 40%">
+            <p>ABOUT</p>
+            <div class="navigation_list">
+              <div class="neon-line"></div>
+              <ul class="navigation_ul">
+                <li>
+                  <a href="../about/index.html#theme">テーマ</a>
+                </li>
+                <li>
+                  <a href="../about/index.html#access">アクセス</a>
+                </li>
+                <li>
+                  <a href="../about/index.html#sns">SNS</a>
+                </li>
+              </ul>
             </div>
+          </div>
+          <div style="width: 45%">
+            <p>EVENT</p>
+            <div class="navigation_list">
+              <div class="neon-line" style="height: 120px"></div>
+              <ul class="navigation_ul">
+                <li>
+                  <a href="../event/index.html">ステージ</a>
+                </li>
+                <li>
+                  <a href="../event/workshop.html">ワークショップ</a>
+                </li>
+                <li>
+                  <a href="../event/booth.html">ブース</a>
+                </li>
+                <li>
+                  <a href="../event/cafe.html">カフェ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div style="width: 40%; padding-top: 10%">
+            <p>CM</p>
+            <div class="navigation_list">
+              <div class="neon-line" style="height: 60px"></div>
+              <ul class="navigation_ul">
+                <li>
+                  <a href="../cm/movie.html">映像</a>
+                </li>
+                <li>
+                  <a href="../cm/goods.html">グッズ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div style="width: 45%"></div>
+          <div class="navigation_img">
+            <img src="../image/index/instagram.png" alt="インスタアイコン" />
+            <img src="../image/index/twitter.png" alt="twitterアイコン" />
+            <img src="../image/index/tiktok.png" alt="tiktokアイコン" />
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="top">
+      <h2>CM</h2>
+      <div class="second-nav">
+        <a href="./movie.html">
+          <div class="second-nav-box">
+            <p>映像</p>
+          </div>
         </a>
         <a href="./goods.html">
-            <div class="second-nav-box">
-                <p>グッズ</p>
-            </div>
+          <div class="second-nav-box">
+            <p>グッズ</p>
+          </div>
         </a>
+      </div>
     </div>
-</div>
-<div class="goods">
-    <h2>グッズ</h2>
-    <div class="contents">
+    <div class="goods">
+      <h2>グッズ</h2>
+      <div class="contents">
         <div class="area">
-            <div class="goods-container"></div>
-            <p>ラバーバンド<br><span>¥価格</span></p>
+          <div class="goods-container"></div>
+          <p>ラバーバンド<br /><span>¥価格</span></p>
         </div>
         <div class="area">
-            <div class="goods-container"></div>
-            <p>ステッカー<br><span>¥価格</span></p>
+          <div class="goods-container"></div>
+          <p>ステッカー<br /><span>¥価格</span></p>
         </div>
         <div class="area">
-            <div class="goods-container"></div>
-            <p>缶バッジ<br><span>¥価格</span></p>
+          <div class="goods-container"></div>
+          <p>缶バッジ<br /><span>¥価格</span></p>
         </div>
         <div class="area">
-            <div class="goods-container"></div>
-            <p>アクリルキーホルダー<br><span>¥価格</span></p>
+          <div class="goods-container"></div>
+          <p>アクリルキーホルダー<br /><span>¥価格</span></p>
         </div>
         <div class="area">
-            <div class="goods-container"></div>
-            <p>ミニチャーム<br><span>¥価格</span></p>
+          <div class="goods-container"></div>
+          <p>ミニチャーム<br /><span>¥価格</span></p>
         </div>
+      </div>
     </div>
-</div>
 
-<footer>
-    <div class="contents">
+    <footer>
+      <div class="contents">
         <p>名古屋市立大学芸術工学部</p>
         <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
         <p>TEL052-721-1225(代) FAX052-721-3110</p>
         <p>©️ Copyright 2023geikosai</p>
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
