--- a/public/event/booth.html
+++ b/public/event/booth.html
@@ -21,9 +21,9 @@
         <a href="#" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
-        <a href="#ABOUT" class="navi_element">ABOUT</a>
-        <a href="#EVENT" class="navi_element">EVENT</a>
-        <a href="#CM" class="navi_element">CM</a>
+        <a href="../about/index.html" class="navi_element">ABOUT</a>
+        <a href="./index.html" class="navi_element">EVENT</a>
+        <a href="../cm/movie.html" class="navi_element">CM</a>
       </div>
       <!-- ハンバーガーメニュー -->
       <button class="hamburger-menu" id="js-hamburger-menu">
@@ -39,13 +39,13 @@
               <div class="neon-line"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">テーマ</a>
+                  <a href="../about/index.html#theme">テーマ</a>
                 </li>
                 <li>
-                  <a href="#">アクセス</a>
+                  <a href="../about/index.html#access">アクセス</a>
                 </li>
                 <li>
-                  <a href="#">SNS</a>
+                  <a href="../about/index.html#sns">SNS</a>
                 </li>
               </ul>
             </div>
@@ -56,16 +56,16 @@
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">ステージ</a>
+                  <a href="./index.html">ステージ</a>
                 </li>
                 <li>
-                  <a href="#">ワークショップ</a>
+                  <a href="./workshop.html">ワークショップ</a>
                 </li>
                 <li>
-                  <a href="#">ブース</a>
+                  <a href="./booth.html">ブース</a>
                 </li>
                 <li>
-                  <a href="#">カフェ</a>
+                  <a href="./cafe.html">カフェ</a>
                 </li>
               </ul>
             </div>
@@ -76,10 +76,10 @@
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">映像</a>
+                  <a href="../cm/movie.html">映像</a>
                 </li>
                 <li>
-                  <a href="#">グッズ</a>
+                  <a href="../cm/goods.html">グッズ</a>
                 </li>
               </ul>
             </div>
@@ -93,57 +93,59 @@
         </div>
       </nav>
     </header>
-    <div class = "top">
-        <h2>EVENT</h2>
-        <div class="second-nav">
-            <a href="">
-                <div class="second-nav-box">
-                    <p>ステージ</p>
-                </div>
-            </a>
-            <a href = "./cafe.html">
-                <div class="second-nav-box">
-                    <p>カフェ</p>
-                </div>
-            </a>
-            <a href = "./workshop.html">
-                <div class="second-nav-box">
-                    <p>ワークショップ</p>
-                </div>
-            </a>
-            <a href = "./booth.html">
-                <div class="second-nav-box">
-                    <p>ブース</p>
-                </div>
-            </a>
-        </div>
+    <div class="top">
+      <h2>EVENT</h2>
+      <div class="second-nav">
+        <a href="">
+          <div class="second-nav-box">
+            <p>ステージ</p>
+          </div>
+        </a>
+        <a href="./cafe.html">
+          <div class="second-nav-box">
+            <p>カフェ</p>
+          </div>
+        </a>
+        <a href="./workshop.html">
+          <div class="second-nav-box">
+            <p>ワークショップ</p>
+          </div>
+        </a>
+        <a href="./booth.html">
+          <div class="second-nav-box">
+            <p>ブース</p>
+          </div>
+        </a>
+      </div>
     </div>
     <div class="booth">
-        <h2>BOOTH</h2>
-        <a href = "./store.html">
-            <div class="store-button">
-                <p>模擬店はこちら</p>
-            </div>
-        </a>
-        <div class="contents">
-            <h2>作品展示</h2>
-            <p>芸工生が制作した作品を展示しています。隅々までご覧ください。</p>
-            <h4>作品投票のお願い</h4>
-            <p>優秀作品を決定する人気投票を行なっております！どなたでも、是非投票にご協力ください！</p>
-            <div class="container">
-                <div class="solo-container"></div>
-                <div class="disco-container"></div>
-                <div class="works-container"></div>
-            </div>
+      <h2>BOOTH</h2>
+      <a href="./store.html">
+        <div class="store-button">
+          <p>模擬店はこちら</p>
         </div>
+      </a>
+      <div class="contents">
+        <h2>作品展示</h2>
+        <p>芸工生が制作した作品を展示しています。隅々までご覧ください。</p>
+        <h4>作品投票のお願い</h4>
+        <p>
+          優秀作品を決定する人気投票を行なっております！どなたでも、是非投票にご協力ください！
+        </p>
+        <div class="container">
+          <div class="solo-container"></div>
+          <div class="disco-container"></div>
+          <div class="works-container"></div>
+        </div>
+      </div>
     </div>
     <footer>
-        <div class="contents">
-            <p>名古屋市立大学芸術工学部</p>
-            <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
-            <p>TEL052-721-1225(代) FAX052-721-3110</p>
-            <p>©️ Copyright 2023geikosai</p>
-        </div>
+      <div class="contents">
+        <p>名古屋市立大学芸術工学部</p>
+        <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
+        <p>TEL052-721-1225(代) FAX052-721-3110</p>
+        <p>©️ Copyright 2023geikosai</p>
+      </div>
     </footer>
   </body>
 </html>
