--- a/public/event/cafe.html
+++ b/public/event/cafe.html
@@ -21,9 +21,9 @@
         <a href="#" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
-        <a href="#ABOUT" class="navi_element">ABOUT</a>
-        <a href="#EVENT" class="navi_element">EVENT</a>
-        <a href="#CM" class="navi_element">CM</a>
+        <a href="../about/index.html" class="navi_element">ABOUT</a>
+        <a href="./index.html" class="navi_element">EVENT</a>
+        <a href="../cm/movie.html" class="navi_element">CM</a>
       </div>
       <!-- ハンバーガーメニュー -->
       <button class="hamburger-menu" id="js-hamburger-menu">
@@ -39,13 +39,13 @@
               <div class="neon-line"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">テーマ</a>
+                  <a href="../about/index.html#theme">テーマ</a>
                 </li>
                 <li>
-                  <a href="#">アクセス</a>
+                  <a href="../about/index.html#access">アクセス</a>
                 </li>
                 <li>
-                  <a href="#">SNS</a>
+                  <a href="../about/index.html#sns">SNS</a>
                 </li>
               </ul>
             </div>
@@ -56,16 +56,16 @@
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">ステージ</a>
+                  <a href="./index.html">ステージ</a>
                 </li>
                 <li>
-                  <a href="#">ワークショップ</a>
+                  <a href="./workshop.html">ワークショップ</a>
                 </li>
                 <li>
-                  <a href="#">ブース</a>
+                  <a href="./booth.html">ブース</a>
                 </li>
                 <li>
-                  <a href="#">カフェ</a>
+                  <a href="./cafe.html">カフェ</a>
                 </li>
               </ul>
             </div>
@@ -76,10 +76,10 @@
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="#">映像</a>
+                  <a href="../cm/movie.html">映像</a>
                 </li>
                 <li>
-                  <a href="#">グッズ</a>
+                  <a href="../cm/goods.html">グッズ</a>
                 </li>
               </ul>
             </div>
@@ -95,33 +95,28 @@
     </header>
     <main>
       <div class="top">
-        <div class="top-title">
-          <div class="top-title-rect"></div>
-          <div class="back-purple">
-            <h2>EVENT</h2>
-          </div>
-        </div>
-        <div class="event-nav">
-          <div class="back-black">
-            <div class="event-nav-box">
-              <a href="./movie.html">ステージ</a>
+        <h2>EVENT</h2>
+        <div class="second-nav">
+          <a href="">
+            <div class="second-nav-box">
+              <p>ステージ</p>
             </div>
-          </div>
-          <div class="back-black">
-            <div class="event-nav-box" style="background-color: #fdc25a">
-              <a href="./goods.html">カフェ</a>
+          </a>
+          <a href="./cafe.html">
+            <div class="second-nav-box" style="background-color: #fdc25a">
+              <p>カフェ</p>
             </div>
-          </div>
-          <div class="back-black">
-            <div class="event-nav-box">
-              <a href="./goods.html">ワークショップ</a>
+          </a>
+          <a href="./workshop.html">
+            <div class="second-nav-box">
+              <p>ワークショップ</p>
             </div>
-          </div>
-          <div class="back-black">
-            <div class="event-nav-box">
-              <a href="./goods.html">ブース</a>
+          </a>
+          <a href="./booth.html">
+            <div class="second-nav-box">
+              <p>ブース</p>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       <div class="cafe-explain">
