second-nav修正、aタグジャンプ先設定

--- a/public/event/index.html
+++ b/public/event/index.html
@@ -13,13 +13,13 @@
   <body>
     <header class="header">
       <div class="header_title">
-        <a href="#" class="header_logo_a">
+        <a href="../index.html" class="header_logo_a">
           <img
             src="../image/index/main_logo.png"
             alt="メインロゴ"
             class="header_logo"
         /></a>
-        <a href="#" class="navi_element">GEIKO SAI 2023</a>
+        <a href="../index.html" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
         <a href="../about/index.html" class="navi_element">ABOUT</a>
@@ -98,7 +98,7 @@
       <div class="top">
         <h2>EVENT</h2>
         <div class="second-nav">
-          <a href="">
+          <a href="./index.html">
             <div class="second-nav-box" style="background-color: #fdc25a">
               <p>ステージ</p>
             </div>
