--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -12,13 +12,13 @@
   <body>
     <header class="header">
       <div class="header_title">
-        <a href="#" class="header_logo_a">
+        <a href="../index.html" class="header_logo_a">
           <img
             src="../image/index/main_logo.png"
             alt="メインロゴ"
             class="header_logo"
         /></a>
-        <a href="#" class="navi_element">GEIKO SAI 2023</a>
+        <a href="../index.html" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
         <a href="../index.html" class="navi_element">ABOUT</a>
