--- a/public/event/store.html
+++ b/public/event/store.html
@@ -127,36 +127,36 @@
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">geiko records</p>
-              <p>説明文</p>
+              <p class="name">Geiko Records</p>
+              <p>学年の枠を飛び越え集結した芸工生アーティストたちによるオムニバスCDを販売します！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">kara⤴︎age</p>
-              <p>説明文</p>
+              <p class="name">Kara⤴︎⤴︎age</p>
+              <p>北千種キャンパスでからあげ屋さん始めました！<br>いろんな味の美味しい唐揚げで気分もage⤴︎age⤴︎！キテネ！！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">neocharm</p>
-              <p>説明文</p>
+              <p class="name">NEO CHARM</p>
+              <p>アクセサリー型魔法道具を販売します。<br>イヤリング↔︎ピアスのパーツ交換が可能です。</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">nfab</p>
-              <p>説明文</p>
+              <p class="name">Nfabric</p>
+              <p>コーヒーとパン、フリマの店です。<br>お腹を満たすよりも心を満たせるようなお店作りをしています。<br>お話をするだけでも大歓迎なのでぜひ来てみてください。</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">omucheki</p>
-              <p>説明文</p>
+              <p class="name">おむフラとチェキ</p>
+              <p>おいしいオムレツフランクを売ります！<br>思い出作りにチェキも撮りませんか？</p>
             </div>
           </div>
           <div class="shadow">
@@ -169,85 +169,85 @@
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">pdf</p>
-              <p>説明文</p>
+              <p class="name">.pdf</p>
+              <p>うまかわポップコーン！<br>自販機より安いドリンク！！<br>断捨離フリーマーケット！！！<br>これが一店舗で楽しめちゃいます！卒論に追われる４年生たちが店頭で待ってるよ〜(^_-)-!</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">うらないうらない</p>
-              <p>説明文</p>
+              <p>うらないします。<br>ゲームとかもします。<br>遊びにきてね！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ごっちゃや</p>
-              <p>説明文</p>
+              <p>4人が4種類の手作り雑貨をごちゃ混ぜにして売ります。<br>1つのお店で4度美味しい！あなたのお気に入りの商品に絶対出会えます！<br>芸工祭当日、ご来店お待ちしております</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">ジャンクみのる</p>
-              <p>説明文</p>
+              <p class="name">じゃんくみのる</p>
+              <p>安くて美味しいスタミナフードを提供します！<br>これであなたも元気満タン！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">タコ丸</p>
-              <p>説明文</p>
+              <p class="name">たままる</p>
+              <p>お祭りでよくあるたません屋さんやります！<br>来てね〜！！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">とあ</p>
-              <p>説明文</p>
+              <p class="name">Ari²飯店</p>
+              <p>フランクフルトorバナナ右左どっち！！！<br>はい売ります。</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">ペゴパ</p>
-              <p>説明文</p>
+              <p class="name">ペゴパ！</p>
+              <p>チーズハットグとトッポギ売ります。<br>建築2年7人でやりますぜひ来てください！！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">まるや</p>
-              <p>説明文</p>
+              <p>おいしいまあるいタピオカと、まあるい焼きおにぎり売ってます！<br>気軽に遊びに来てね〜</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">よだストレーション</p>
-              <p>説明文</p>
+              <p class="name">ヨダストレーション</p>
+              <p>似顔絵描きます！<br>その他もステッカーやLINEスタンプも売るよ！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">雑貨</p>
-              <p>説明文</p>
+              <p class="name">ザッカ</p>
+              <p>産業4年の3人が作る、シール、フォトフレーム、ポストカードなど...!<br>ゆるくて可愛い雑貨(ザッカ)を販売します！<br>気軽に立ち寄ってみてください！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">山本飯店</p>
-              <p>説明文</p>
+              <p class="name">山村飯店</p>
+              <p>福井県で大流行、山村餃子販売します。<br>見どころは元自治会長山村涼翔によるワンオペ！<br>全ての作業を華麗にこなす彼の姿を楽しみながらアツアツ餃子をご賞味あれ！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">跳膝商店</p>
-              <p>説明文</p>
+              <p>クラフトコーラとモノを売ってます。</p>
             </div>
           </div>
         </div>
